grammar.txt
Basic grammar for the language

program     : statements
statements  : NEWLINE* (expr NEWLINE*)*
expr        : identifier (EQUALS expr)?
              comp-expr ((AND|OR) comp-expr)*
comp-expr   : NOT comp-expr ? arith-expr ((ISE|NE|LT|GT|LTE|GTE) arit-expr)*
arith-expr  : term ((PLUS|MINUS) term)*
term        : power ((MUL|DIV) power)*
power       : factor (POW factor)*
factor      : INT|FLOAT|(expr)|identifier|if-block|for-block|while-block
              

if-block    : if expr then statements (else statements)? end
for-block   : for identifier EQUALS expr to expr (step expr)? do statements end
while-block : while expr do statements end
